# doas

./: Cargo.toml  README.md  build.sh
src/: doas.rs  main.rs  user.rs
src/doas/: log.rs  persistent_logins.rs  user.rs
src/parser/: lexer.rs  mod.rs  parser_err.rs  rules.rs  tests.rs
src/parser/lexer/: lexer_tests.rs
