[package]
name = "doas"
version = "0.1.0"
authors = ["Arvinder Dhanoa <ArvinderDhan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
pwhash = "0.3.1"
rpassword="4.0"
nom = "5.1.2"
nix = "0.18.0"
